test/vm/errors/index_oob.ach
// Expected error: index out of bounds
let a = [1, 2, 3]
a[5]
